--- a/frontend/assets/sass/_side_cart_block.sass
+++ b/frontend/assets/sass/_side_cart_block.sass
@@ -277,6 +277,9 @@
                   text-align: center
                   text-transform: uppercase
                   width: 185px
+                  -webkit-appearance: none
+                  -moz-appearance: none
+                  appearance: none
 
           .cart-sub-totals-block-wrapper
             display: flex
